packages/typ/tests/fixtures/diagnostics/0346_external_identity_use_mismatch_01.ml.expected
File "0346_external_identity_use_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0346_external_identity_use_mismatch_01 is not a valid module name.

File "0346_external_identity_use_mismatch_01.ml", line 2, characters 17-21:
2 | let _ = id_alpha true
                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
